--- a/content/css/blueprint/screen.css
+++ b/content/css/blueprint/screen.css
@@ -11,6 +11,7 @@
 @import 'lib/typography.css';
 @import 'lib/grid.css';
 @import 'lib/forms.css';
+@import 'plugins/buttons/buttons.css';
 
 /* Plugins:
    Additional functionality can be found in the plugins directory.
