--- a/content/css/site.css
+++ b/content/css/site.css
@@ -39,6 +39,18 @@ hr {
   color:      <%= @page.color['highlight'] %>;
 }
 
+#nav {
+  clear: both;
+  padding: 1.2em 1.2em 1.2em 1.2em;
+  
+}
+
+.clear {
+  width: 100%;
+  height: 20px;
+  clear:both;
+}
+
 /* Tables
  * --------------------------------------------------------------------- */
 table {
