--- a/layouts/default.rhtml
+++ b/layouts/default.rhtml
@@ -43,11 +43,21 @@ latest: 03
    <div class="column span-5 append-2 last side">
       <div id="nav">
           <a class="button" href="<%= url_for_page :title => "Home Page" %>">
-        	  <img src="/css/blueprint/plugins/buttons/icons/key.png" alt=""/> Home
+        	  <img src="/css/blueprint/plugins/buttons/icons/house.png" alt=""/> Home
         	</a>
-          <a class="button" href="/password/reset/">
-        	  <img src="/css/blueprint/plugins/buttons/icons/key.png" alt=""/> Change Password
+          <a class="button" href="<%= url_for_page :title => "Information" %>">
+        	  <img src="/css/blueprint/plugins/buttons/icons/help.png" alt=""/> Information
         	</a>
+        	<a class="button" href="<%= url_for_page :title => "Syllabus" %>">
+        	  <img src="/css/blueprint/plugins/buttons/icons/exclamation.png" alt=""/> Syllabus
+        	</a>
+        	<a class="button" href="http://www.cplusplus.com/reference/">
+          	  <img src="/css/blueprint/plugins/buttons/icons/computer.png" alt=""/> C++ Reference
+          </a>
+          <a class="button" href="http://www.aw-bc.com/cgi-bin/cssupport/book.pl?id=122">
+          	  <img src="/css/blueprint/plugins/buttons/icons/book.png" alt=""/> Text Book
+          </a>
+          
       </div>
       
       <div class="clear">
