--- a/content/information.rhtml
+++ b/content/information.rhtml
@@ -17,7 +17,7 @@ filter:
 	<ul>
 		<li><strong>Wednesday:</strong> 12:30 - 2:30</li>
 		<li><strong>Friday:</strong> 11:30 - 1:30</li>
-		<li><em>Other times by appointment</em></li>
+		<li>Other times by appointment</li>
 	</ul>
 	<li><strong>Phone:</strong> 4-7337</li>
 	
@@ -37,7 +37,7 @@ filter:
 		<li><strong>Monday:</strong> 11:00 - 1:00</li>
 		<li><strong>Wednesday:</strong> 12:00 - 1:00</li>
 		<li><strong>Friday:</strong> 12:00 - 2:00</li>
-		<li><em>Other times by appointment</em></li>
+		<li>Other times by appointment</li>
 	</ul>
 	<li><strong>Phone:</strong> 4-7337</li>
 	
