--- a/layouts/default.rhtml
+++ b/layouts/default.rhtml
@@ -42,22 +42,11 @@ latest: 03
 
    <div class="column span-5 append-2 last side">
       <div id="nav">
-          <a class="button" href="<%= url_for_page :title => "Home Page" %>">
-        	  <img src="/css/blueprint/plugins/buttons/icons/house.png" alt=""/> Home
-        	</a>
-          <a class="button" href="<%= url_for_page :title => "Information" %>">
-        	  <img src="/css/blueprint/plugins/buttons/icons/help.png" alt=""/> Information
-        	</a>
-        	<a class="button" href="<%= url_for_page :title => "Syllabus" %>">
-        	  <img src="/css/blueprint/plugins/buttons/icons/exclamation.png" alt=""/> Syllabus
-        	</a>
-        	<a class="button" href="http://www.cplusplus.com/reference/">
-          	  <img src="/css/blueprint/plugins/buttons/icons/computer.png" alt=""/> C++ Reference
-          </a>
-          <a class="button" href="http://www.aw-bc.com/cgi-bin/cssupport/book.pl?id=122">
-          	  <img src="/css/blueprint/plugins/buttons/icons/book.png" alt=""/> Text Book
-          </a>
-          
+          <%= button_for("Home", url_for_page(:title => "Home Page"), "house") %>
+          <%= button_for("Information", url_for_page(:title => "Information"), "help") %>
+          <%= button_for("Syllabus", url_for_page(:title => "Syllabus"), "exclamation") %>
+          <%= button_for("C++ Reference", "http://www.cplusplus.com/reference/", "computer") %>
+          <%= button_for("Text Book", "http://www.aw-bc.com/cgi-bin/cssupport/book.pl?id=122", "book") %>
       </div>
       
       <div class="clear">
