added syllabus and information page

--- a/content/information.rhtml
+++ b/content/information.rhtml
@@ -6,7 +6,7 @@ filter:
 ---
 <h3>Jim Vallandingham</h3>
 <ul>
-	<li><strong>Email:</strong> vlandham@ku.edu</li>
+	<li><strong>Email:</strong> jvalland@eecs.ku.edu</li>
 	<li><strong>Office:</strong> 2043</li>
 	<li><strong>EECS 268 Labs:</strong></li>
 	<ul>
