--- a/layouts/default.rhtml
+++ b/layouts/default.rhtml
@@ -32,7 +32,7 @@ latest: 03
 
    <div class="column span-20 prepend-2 append-2 first last" id="header">
      <a class="title" href="<%= url_for_page :title => "Home Page" %>">EECS 268 - Lab </a>
-     <p class="subtitle">Fall 2008</p>
+     <p class="subtitle">Spring 2009</p>
      <hr>
    </div>
   
