changed info to schedule link

--- a/layouts/default.rhtml
+++ b/layouts/default.rhtml
@@ -43,7 +43,7 @@ latest: 03
    <div class="column span-5 append-2 last side">
       <div id="nav">
           <%= button_for("Home", url_for_page(:title => "Home Page"), "house") %>
-          <%= button_for("Information", url_for_page(:title => "Information"), "help") %>
+          <%= button_for("Schedule", url_for_page(:title => "Schedule"), "help") %>
           <%= button_for("Syllabus", url_for_page(:title => "Syllabus"), "exclamation") %>
           <%= button_for("C++ Reference", "http://www.cplusplus.com/reference/", "computer") %>
           <%= button_for("Text Book", "http://www.aw-bc.com/cgi-bin/cssupport/book.pl?id=122", "book") %>
