updated office hours

--- a/content/syllabus.rhtml
+++ b/content/syllabus.rhtml
@@ -63,7 +63,7 @@ filter:
   1005D Eaton<br>
   <b style='mso-bidi-font-weight:normal'>Office Hours:</b> </p>
   <p class=MsoNormal align=center style='text-align:center'>M 11:30am-2:00pm</p>
-  <p class=MsoNormal align=center style='text-align:center'>T 2:15pm-4:00pm<br>
+  <p class=MsoNormal align=center style='text-align:center'>M 3:00pm-4:30pm<br>
   Office Phone: 864-7337<br>
   electronic mail: <a href="mailto:vlandham@ku.edu">vlandham@ku.edu</a> </p>
   </td>
